--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.42.1",
     "@tailwindcss/vite": "^4.1.11",
+    "highlight.js": "^11.11.1",
     "konva": "^9.3.22",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
@@ -19,7 +20,9 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-konva": "^19.0.7",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
+    "rehype-highlight": "^7.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
