--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_cmVuZXdpbmctYmVlLTE0LmNsZXJrLmFjY291bnRzLmRldiQ
+
+VITE_GEMINI_API_KEY=AIzaSyC_0W8JKs3erwlTv5_rff4kVxsnXdp-nTw
+VITE_GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
+
+VITE_API_BASE_URL=http://localhost:3000/api
+
