Add some Features

--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.42.1",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "highlight.js": "^11.11.1",
     "konva": "^9.3.22",
     "lucide-react": "^0.536.0",
+    "luxon": "^3.7.1",
     "react": "^19.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.1.0",
@@ -22,6 +26,7 @@
     "react-konva": "^19.0.7",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.2",
     "rehype-highlight": "^7.0.2",
     "tailwindcss": "^4.1.11"
   },
